# serializer version: 1
# name: test_all_entities[button.test_reolink_cam_guard_go_to-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_guard_go_to',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Guard go to',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Guard go to',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'guard_go_to',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_guard_go_to',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_guard_go_to-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Guard go to',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_guard_go_to',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_guard_set_current_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.test_reolink_cam_guard_set_current_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Guard set current position',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Guard set current position',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'guard_set',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_guard_set',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_guard_set_current_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Guard set current position',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_guard_set_current_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_pre_siren-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_pre_siren',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pre-siren',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pre-siren',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pre_siren',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_pre_siren',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_pre_siren-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Pre-siren',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_pre_siren',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_calibrate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.test_reolink_cam_ptz_calibrate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ calibrate',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ calibrate',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ptz_calibrate',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_calibrate',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_calibrate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ calibrate',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_calibrate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_continuous_rotation-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_ptz_continuous_rotation',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ continuous rotation',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ continuous rotation',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'ptz_auto',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_auto',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_continuous_rotation-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ continuous rotation',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_continuous_rotation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_ptz_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ down',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'ptz_down',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ down',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_left-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_ptz_left',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ left',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ left',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'ptz_left',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_left',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_left-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ left',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_left_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_ptz_left_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ left down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ left down',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'ptz_left_down',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_left_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_left_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ left down',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_left_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_left_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_ptz_left_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ left up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ left up',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'ptz_left_up',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_left_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_left_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ left up',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_left_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_right-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_ptz_right',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ right',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ right',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'ptz_right',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_right',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_right-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ right',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_right_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_ptz_right_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ right down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ right down',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'ptz_right_down',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_right_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_right_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ right down',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_right_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_right_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_ptz_right_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ right up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ right up',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'ptz_right_up',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_right_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_right_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ right up',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_right_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_stop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_ptz_stop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ stop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ stop',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ptz_stop',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_stop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ stop',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_stop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_ptz_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ up',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'ptz_up',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ up',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_zoom_in-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_ptz_zoom_in',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ zoom in',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ zoom in',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'ptz_zoom_in',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_zoom_in',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_zoom_in-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ zoom in',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_zoom_in',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_zoom_out-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_reolink_cam_ptz_zoom_out',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'PTZ zoom out',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PTZ zoom out',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'ptz_zoom_out',
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_ptz_zoom_out',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_ptz_zoom_out-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam PTZ zoom out',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_ptz_zoom_out',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_cam_restart-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.test_reolink_cam_restart',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Restart',
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Restart',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'ABC1234567D89EFG_DEF7654321D89GHT_reboot',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_cam_restart-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'restart',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_cam Restart',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_cam_restart',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.test_reolink_name_restart-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.test_reolink_name_restart',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Restart',
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Restart',
    'platform': 'reolink',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'ABC1234567D89EFG_reboot',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.test_reolink_name_restart-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'restart',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'test_reolink_name Restart',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_reolink_name_restart',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
